name:                dualizer
version:             0.1.0.0
synopsis:            Automatically generate dual constructions.
description:         A library for defining duals automatically, as well as
                     labeling duals in existing packages.
homepage:            https://github.com/sellout/dualizer#readme
author:              Greg Pfeil
maintainer:          greg@technomadic.org
copyright:           2017 Greg Pfeil
license:             AGPL
license-file:        LICENSE
category:            Dual
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dual.Base
                     , Dual.Example
                     , Dual.Lens
                     , Dual.Prelude
                     , Dual.TH
  build-depends:       base >= 4.7 && < 5
                     , bifunctors
                     , comonad
                     , containers
                     , lens
                     , template-haskell
                     , transformers
  default-extensions:  ConstraintKinds
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveTraversable
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , LambdaCase
                     , MultiParamTypeClasses
                     , RankNTypes
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeOperators
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sellout/dualizer
